# App_Isi

./: Makefile  Makefile.am  README.md  app_isie.glade.bak.bak  configure.in
APP_isie_final/: Makefile.in  app_isie.glade.bak.bakp.bak  config.h  config.status  configure
APP_isie_final/autom4te.cache/: output.1  requests  traces.0  traces.1
APP_isie_final/po/: Makefile.in
APP_isie_final/src/: Makefile  Makefile.am  TPHF.c  bureau.h  interface.c.bak  interface.h.bak  list_elec.c  list_elec.h  main.c  reclamation.c  uti.txt  utilisateur.c  utilisateur.h  utilisateur.txt
APP_isie_final/src/.deps/: bureau.Po  callbacks.Po  list_elec.Po  reclamation.Po
po/: Makefile
src/: Makefile.in  TPHF.h  ajout_election.txt  app_isie_final  archive.txt  bureau.c  bvote.txt  callbacks.c  callbacks.h  election.c  election.h  interface.c  liste.txt  reclamation.h  reclamation.txt
src/.deps/: election.Po
